tests/fail/union_var.py
a: int | bool = 10.0
